...
        return imageView
    }()

    private lazy var likeButton: UIButton = {
        let button = UIButton(type: .custom)
        button.setImage(UIImage(named: "like"), for: .normal)
        button.accessibilityIdentifier = "nft.likeButton"
        button.addTarget(self, action: #selector(likeTapped), for: .touchUpInside)
        return button
    }()

    private lazy var ratingView = RatingView()

...
        return label
    }()

    private lazy var cartButton: UIButton = {
        let button = UIButton(type: .custom)
        button.tintColor = .closeButton
        button.accessibilityIdentifier = "nft.cartButton"
        button.addTarget(self, action: #selector(cartTapped), for: .touchUpInside)
        return button
    }()

    // MARK: - Init

...
