...

    private lazy var authorButton: UIButton = {
        let button = UIButton(type: .system)
        button.titleLabel?.font = .caption1
        button.setTitleColor(.systemBlue, for: .normal)
        button.contentHorizontalAlignment = .leading
        button.accessibilityIdentifier = "collection.authorButton"
        button.addTarget(self, action: #selector(authorTapped), for: .touchUpInside)
        return button
    }()

    private lazy var descriptionLabel: UILabel = {
        let label = UILabel()
...
